<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ctkVTKDiscretizableColorTransferWidget</class>
 <widget class="QWidget" name="ctkVTKDiscretizableColorTransferWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>447</width>
    <height>232</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Color Transfer Function</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="margin">
    <number>0</number>
   </property>
   <item row="9" column="1">
    <widget class="QLabel" name="minOpacityLabel">
     <property name="text">
      <string>0</string>
     </property>
    </widget>
   </item>
   <item row="10" column="1" colspan="3">
    <widget class="ctkRangeWidget" name="rangeSlider" native="true"/>
   </item>
   <item row="1" column="3">
    <widget class="QToolButton" name="resetRangeButton">
     <property name="toolTip">
      <string>Reset current range to visible range</string>
     </property>
     <property name="icon">
      <iconset resource="../ctkVTKWidgets.qrc">
       <normaloff>:/Icons/resetRange.png</normaloff>:/Icons/resetRange.png</iconset>
     </property>
    </widget>
   </item>
   <item row="2" column="3">
    <widget class="QToolButton" name="centerRangeButton">
     <property name="toolTip">
      <string>Center current range on median</string>
     </property>
     <property name="icon">
      <iconset resource="../ctkVTKWidgets.qrc">
       <normaloff>:/Icons/resetRangeCustom.png</normaloff>:/Icons/resetRangeCustom.png</iconset>
     </property>
    </widget>
   </item>
   <item row="3" column="3">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="4" column="3">
    <widget class="QToolButton" name="zoomInButton">
     <property name="toolTip">
      <string>Zoom in</string>
     </property>
     <property name="icon">
      <iconset resource="../ctkVTKWidgets.qrc">
       <normaloff>:/Icons/plus.png</normaloff>:/Icons/plus.png</iconset>
     </property>
    </widget>
   </item>
   <item row="5" column="3">
    <widget class="QToolButton" name="zoomOutButton">
     <property name="toolTip">
      <string>Zoom out</string>
     </property>
     <property name="icon">
      <iconset resource="../ctkVTKWidgets.qrc">
       <normaloff>:/Icons/minus.png</normaloff>:/Icons/minus.png</iconset>
     </property>
    </widget>
   </item>
   <item row="6" column="3">
    <spacer name="verticalSpacer_2">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="7" column="3">
    <widget class="QToolButton" name="invertColorTransferFunctionButton">
     <property name="toolTip">
      <string>Invert color map</string>
     </property>
     <property name="icon">
      <iconset resource="../ctkVTKWidgets.qrc">
       <normaloff>:/Icons/invert.png</normaloff>:/Icons/invert.png</iconset>
     </property>
     <property name="popupMode">
      <enum>QToolButton::DelayedPopup</enum>
     </property>
    </widget>
   </item>
   <item row="8" column="3">
    <spacer name="verticalSpacer_3">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="9" column="3">
    <widget class="QToolButton" name="optionButton">
     <property name="contextMenuPolicy">
      <enum>Qt::DefaultContextMenu</enum>
     </property>
     <property name="toolTip">
      <string>Other options</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1" colspan="2">
    <widget class="ctkVTKScalarsToColorsComboBox" name="scalarsToColorsSelector"/>
   </item>
   <item row="2" column="1">
    <widget class="QLabel" name="maxOpacityLabel">
     <property name="text">
      <string>1</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1" rowspan="6">
    <widget class="ctkDoubleSlider" name="opacitySlider" native="true">
     <property name="value" stdset="0">
      <double>1.000000000000000</double>
     </property>
     <property name="singleStep" stdset="0">
      <double>0.100000000000000</double>
     </property>
     <property name="pageStep" stdset="0">
      <double>0.200000000000000</double>
     </property>
     <property name="minimum" stdset="0">
      <double>0.000001000000000</double>
     </property>
     <property name="maximum" stdset="0">
      <double>1.000000000000000</double>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ctkDoubleSlider</class>
   <extends>QWidget</extends>
   <header>ctkDoubleSlider.h</header>
  </customwidget>
  <customwidget>
   <class>ctkRangeWidget</class>
   <extends>QWidget</extends>
   <header>ctkRangeWidget.h</header>
  </customwidget>
  <customwidget>
   <class>ctkVTKScalarsToColorsComboBox</class>
   <extends>QComboBox</extends>
   <header>ctkVTKScalarsToColorsComboBox.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../ctkVTKWidgets.qrc"/>
 </resources>
 <connections/>
</ui>
